--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "type": "module",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/vladimir-kzh/frontend-project-lvl1/workflows/hexlet-check/badge.svg)](https://github.com/vladimir-kzh/frontend-project-lvl1/actions)",
-  "main": "index.js",
+  "bin": {
+    "brain-games": "bin/brain-games.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
