--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/vladimir-kzh/frontend-project-lvl1/issues"
   },
-  "homepage": "https://github.com/vladimir-kzh/frontend-project-lvl1#readme"
+  "homepage": "https://github.com/vladimir-kzh/frontend-project-lvl1#readme",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  }
 }
